# oss-security-risk-assessment-agent

./: .oss-risk-ignore.example.yml  .oss-risk-policy.example.yml  README.md  pyproject.toml  report.md  test_runner.py
.github/workflows/: update_cisa_kev.yml
data/cisa/: kev_index.json
docs/: architecture.md  oss-security-risk-assessment-agent-spec-v4.md
oss_risk_agent/: .env  __init__.py  cli.py
oss_risk_agent/config/: __init__.py  loader.py  settings.py
oss_risk_agent/core/: __init__.py  gate.py  models.py  opa_integration.py  rule_engine.py  sarif.py  scanner.py  scoring.py
oss_risk_agent/integrations/: __init__.py  advisory_client.py  github_client.py
oss_risk_agent/models/: __init__.py  context.py  result.py  risk.py
oss_risk_agent/outputs/: __init__.py  json_writer.py  markdown_writer.py  sarif_writer.py
oss_risk_agent/pipeline/: __init__.py  base.py  factory.py
oss_risk_agent/rules/: __init__.py  base.py  builtin.py  category_a_dependency.py  category_b_supplychain.py  category_c_configuration.py  category_c_iac.py  category_d_governance.py  category_e_license.py  category_f_cicd.py  registry.py
oss_risk_agent/scoring/: __init__.py  scorer.py
oss_risk_agent/utils/: __init__.py  epss_client.py  github_api.py  js_parser.py  kev_client.py  osv_client.py  parsers.py  sbom.py
rules/: ruleset.example.yml
tests/: conftest.py  test_a0_sbom_rule.py  test_cli_smoke.py  test_gate.py  test_opa_integration.py  test_rules_a.py  test_rules_b.py  test_rules_c.py  test_rules_d.py  test_rules_e.py  test_rules_f.py  test_scoring.py
(+3 files in other folders)
