[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-security-risk-assessment-agent"
version = "0.1.0"
description = "Skeleton for OSS security risk assessment agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
oss-risk-agent = "oss_risk_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oss_risk_agent*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"